[gd_scene load_steps=4 format=3 uid="uid://dfom1ictumgww"]

[ext_resource type="Script" path="res://environment/scripts/teleport_manager.gd" id="1_sqaba"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ebll6"]
size = Vector3(70, 1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_sv8k4"]

[node name="Teleportation" type="Node3D"]
script = ExtResource("1_sqaba")
metadata/_edit_lock_ = true

[node name="TeleportZForward" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -30)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TeleportZForward"]
shape = SubResource("BoxShape3D_ebll6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TeleportZForward"]
visible = false
mesh = SubResource("BoxMesh_sv8k4")

[node name="TeleportZForwardPoint" type="Marker3D" parent="TeleportZForward"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 55.0318)

[node name="TeleportZBackward" type="Area3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 30)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TeleportZBackward"]
shape = SubResource("BoxShape3D_ebll6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TeleportZBackward"]
visible = false
mesh = SubResource("BoxMesh_sv8k4")

[node name="TeleportZBackwardPoint" type="Marker3D" parent="TeleportZBackward"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 55)

[node name="TeleportXForward" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TeleportXForward"]
shape = SubResource("BoxShape3D_ebll6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TeleportXForward"]
visible = false
mesh = SubResource("BoxMesh_sv8k4")

[node name="TeleportXForwardPoint" type="Marker3D" parent="TeleportXForward"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 55.0318)

[node name="TeleportXBackward" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 30, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TeleportXBackward"]
shape = SubResource("BoxShape3D_ebll6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TeleportXBackward"]
visible = false
mesh = SubResource("BoxMesh_sv8k4")

[node name="TeleportXBackwardPoint" type="Marker3D" parent="TeleportXBackward"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 55.0318)

[connection signal="body_entered" from="TeleportZForward" to="." method="zForward"]
[connection signal="body_entered" from="TeleportZBackward" to="." method="zBackward"]
[connection signal="body_entered" from="TeleportXForward" to="." method="xForward"]
[connection signal="body_entered" from="TeleportXBackward" to="." method="xBackward"]
